SVG-ize hamburger menu, fix spacing on mobile nav

--- a/_sass/indico.scss
+++ b/_sass/indico.scss
@@ -183,6 +183,7 @@ b, strong {
     .navbar-collapse {
         border-top: 1px solid $blue-dark;
         margin: 0 -15px;
+        margin-top: 8px;
         padding-bottom: 0;
         @media(min-width: $md) {
             border-top: 0;
